# py3dengine

./: .gitignore  clean.sh  install.sh  py3dengine-plans.txt  pyproject.toml  uninstall.sh
py3dengine/config/: config.py
py3dengine/core/: component.py  engine.py  gameobject.py  json_util.py  message.py  message_handler.py  nameable.py  resource.py  resource_import.py  resource_manager.py  transform.py
py3dengine/logging/: logging.py
py3dengine/math/extension/: CMakeLists.txt  mathmodule.c  pyproject.toml  setup.py
py3dengine/math/extension/src/headers/: py3dmatrix4x4.h  py3dquaternion.h  py3dvector3.h
py3dengine/math/extension/src/source/: py3dmatrix4x4.c  py3dquaternion.c  py3dvector3.c
py3dengine/math/lib/: CMakeLists.txt
py3dengine/math/lib/src/headers/: matrix.h  quaternion.h  util.h  vector.h
py3dengine/math/lib/src/source/: matrix.c  quaternion.c  util.c  vector.c
py3dengine/wfoparser/: lexer.py  parser.py  wfoparser.py  wfoprocessor.py  wfostatement.py  wfotoken.py
tests/math/: unittests.py
tests/wfoparser/: test_lexer.py  test_parser.py  test_processor.py
